<resources>
    <string name="app_name">Calendify</string>
    <string name="결과">결과</string>
    <string name="title">일정 작성</string>
    <string name="text_name">제목</string>
    <string name="text_start_dateTime">시작</string>
    <string name="text_end_dateTime">종료</string>
    <string name="text_description">내용</string>
    <string name="text_category">카테고리</string>
    <string name="text_week">몇주 입력</string>
    <string name="text_location">장소</string>

    <string name="editText_name">일정명 입력</string>
    <string name="editText_date">날짜</string>
    <string name="edittext_time">시간</string>
    <string name="edittext_detail">상세내용 입력</string>
    <string name="edittext_location">장소 입력</string>
    <string name="radiobutton_day">매일 반복</string>
    <string name="radiobutton_week">매주 반복</string>


    <string name="button_add">추 가</string>
    <string name="button_update">수 정</string>
    <string name="button_date">날짜 추가</string>
    <string name="button_time">시간 추가</string>

</resources>