<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".schedule.create.ScheduleCreateActivity">

    <EditText
        android:id="@+id/schedule_create_title"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="제목"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />


    <LinearLayout
        android:id="@+id/schedule_create_start_datetime"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schedule_create_title">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/text_start_dateTime"
            android:textSize="20sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.124"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.223" />

        <TextView
            android:id="@+id/schedule_create_start_date"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:gravity="right|center"
            android:paddingRight="5dp"
            android:text="@string/editText_date"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/schedule_create_start_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/edittext_time"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/schedule_create_end_datetime"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schedule_create_start_datetime">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/text_end_dateTime"
            android:textSize="20sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.124"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.223" />

        <TextView
            android:id="@+id/schedule_create_end_date"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:gravity="right|center"
            android:paddingRight="5dp"
            android:text="@string/editText_date"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/schedule_create_end_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/edittext_time"
            android:textColor="@color/black" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schedule_create_description">

        <RadioGroup
            android:id="@+id/schedule_create_cycle_radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.713">


            <RadioButton
                android:id="@+id/schedule_create_radio_day"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp"
                android:text="@string/radiobutton_day"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <RadioButton
                android:id="@+id/schedule_create_radio_week"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton_week" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/schedule_create_category_spinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/schedule_create_description" />

            <EditText
                android:id="@+id/schedule_create_cycle_repeat_times"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="반복 횟수"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:selectAllOnFocus="true"
                android:visibility="invisible"
                tools:visibility="visible" />

        </LinearLayout>
    </LinearLayout>


    <EditText
        android:id="@+id/schedule_create_location"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="장소"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"

        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/schedule_create_description"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="내용"
        android:inputType="textMultiLine"
        android:lines="3"
        android:minHeight="48dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schedule_create_end_datetime" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schedule_create_location">

        <CheckBox
            android:id="@+id/schedule_create_alarm_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="150dp"
            android:text="알림" />

        <Spinner
            android:id="@+id/schedule_create_alert_list_spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="right"
            android:visibility="invisible"
            tools:visibility="visible"
            android:entries="@array/alert" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>